Fixing overflow issue

--- a/app/assets/css/index.css
+++ b/app/assets/css/index.css
@@ -1,7 +1,6 @@
 
 
 .main {
-    padding:0rem 1rem;
     gap:2rem;
 }
 
@@ -11,7 +10,7 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    width:100vw;
+    width: 100%;
     height:60vh;
     padding:1rem;
 }
@@ -46,4 +45,8 @@
     width: 100%;
     background: url("../images/world-map-black.webp") no-repeat center center fixed;
     background-size: cover;
+}
+
+#home-search {
+    padding:0rem 1rem;
 }
